# api/openapi-rest.yml
@@ -14,57 +14,57 @@ servers:
     description: Production server
 tags:
   - name: status
-    description: Redis cluster status
+    description: RedKey cluster status
   - name: replicas
-    description: Redis cluster replicas
+    description: RedKey cluster replicas
   - name: move
-    description: Redis cluster reshard
+    description: RedKey cluster reshard
   - name: metrics
-    description: Redis cluster metrics
+    description: RedKey cluster metrics
   - name: check
-    description: Redis cluster check
+    description: RedKey cluster check
   - name: fix
-    description: Redis cluster fix
+    description: RedKey cluster fix
   - name: reset
-    description: Redis cluster node reset
+    description: RedKey cluster node reset
   - name: nodes
-    description: Redis cluster nodes
+    description: RedKey cluster nodes
   
 paths:
-  /v1/rediscluster/status:
+  /v1/redkeycluster/status:
     get:
       tags:
         - status
-      summary: Get current Redis Cluster status
-      description: Get current Redis Cluster status from Redis Operator perspective
-      operationId: GetRedisClusterStatus
+      summary: Get current RedKey Cluster status
+      description: Get current RedKey Cluster status from Redis Operator perspective
+      operationId: GetRedKeyClusterStatus
       responses:
         '200':
           description: Return current status
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RedisClusterStatusResponse'
+                $ref: '#/components/schemas/RedKeyClusterStatusResponse'
     put:
       tags:
         - status
-      summary: Update Redis Cluster status
-      description: Update Redis Cluster status
-      operationId: UpdateRedisClusterStatus
+      summary: Update RedKey Cluster status
+      description: Update RedKey Cluster status
+      operationId: UpdateRedKeyClusterStatus
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RedisClusterStatusRequest'
+              $ref: '#/components/schemas/RedKeyClusterStatusRequest'
       responses:
         '200':
           description: Return updated status
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RedisClusterStatusResponse'
+                $ref: '#/components/schemas/RedKeyClusterStatusResponse'
 
-  /v1/cluster/replicas:
+  /v1/redkeycluster/replicas:
     get:
       tags:
         - replicas
@@ -221,12 +221,12 @@ paths:
 
 components:
   schemas:
-    RedisClusterStatusResponse:
+    RedKeyClusterStatusResponse:
       type: object
       properties:
         status:
           type: string
-          description: Redis Cluster Status
+          description: RedKey Cluster Status
           example: Ready
           enum:
             - Initializing
@@ -237,12 +237,12 @@ components:
             - ScalingUp
             - Maintenance
             - Unknown
-    RedisClusterStatusRequest:
+    RedKeyClusterStatusRequest:
       type: object
       properties:
         status:
           type: string
-          description: Redis Cluster Status
+          description: RedKey Cluster Status
           example: Ready
           enum:
             - Initializing
@@ -282,7 +282,7 @@ components:
       properties:
         status:
           type: string
-          description: Redis Cluster Status
+          description: RedKey Cluster Status
           example: Ready
           enum:
             - Ready
@@ -308,12 +308,12 @@ components:
       properties:
         from:
           type: string
-          description: Redis Cluster node to move slots from. Can be the name name or the node index
+          description: RedKey Cluster node to move slots from. Can be the name name or the node index
           example: "0"
         to:
           type: string
-          description: Redis Cluster node to move slots to. Can be the name name or the node index
-          example: rediscluster-sample-1
+          description: RedKey Cluster node to move slots to. Can be the name name or the node index
+          example: redkeycluster-sample-1
         slots:
           type: integer
           description: Slots to move. If not provided, all slots will be moved
@@ -335,28 +335,28 @@ components:
       properties:
         status:
           type: string
-          description: Redis Cluster check status
+          description: RedKey Cluster check status
           example: Completed
           enum:
             - Completed
             - Error
         result:
           type: string
-          description: Redis Cluster check result
+          description: RedKey Cluster check result
           example: OK
           enum:
             - OK
             - Error
         error:
           type: string
-          description: Redis Cluster check error
+          description: RedKey Cluster check error
           example: Error message
     ClusterFixResponse:
       type: object
       properties:
         status:
           type: string
-          description: Redis Cluster fix status
+          description: RedKey Cluster fix status
           example: InProgress
           enum:
             - InProgress
@@ -366,25 +366,25 @@ components:
       properties:
         nodes:
           type: array
-          description: Redis Cluster nodes
+          description: RedKey Cluster nodes
           items:
             type: object
             properties:
               id:
                 type: string
-                description: Redis Cluster node ID
+                description: RedKey Cluster node ID
                 example: c3f4bad062e19339e0e07bb836db5e23f09f0dff
               name:
                 type: string
-                description: Redis Cluster node name
-                example: rediscluster-sample-0
+                description: RedKey Cluster node name
+                example: redkeycluster-sample-0
               flags:
                 type: string
-                description: Redis Cluster node flags
+                description: RedKey Cluster node flags
                 example: master
               slots:
                 type: array
-                description: Redis Cluster node slots
+                description: RedKey Cluster node slots
                 items:
                   type: array
                   items:
@@ -400,25 +400,25 @@ components:
                         example: 16383
               ip:
                 type: string
-                description: Redis Cluster node IP
+                description: RedKey Cluster node IP
                 example: "10.0.0.1"     
               masterId:
                 type: string
-                description: Redis Cluster node master ID
+                description: RedKey Cluster node master ID
                 example: c3f4bad062e19339e0e07bb836db5e23f09f0dff
               failures:
                 type: integer
-                description: Redis Cluster node failures
+                description: RedKey Cluster node failures
                 example: 0     
               sent:
                 type: integer
-                description: Redis Cluster node sent
+                description: RedKey Cluster node sent
                 example: 0
               recv:
                 type: integer
-                description: Redis Cluster node recv
+                description: RedKey Cluster node recv
                 example: 0
               linkStatus:
                 type: string
-                description: Redis Cluster node link status
+                description: RedKey Cluster node link status
                 example: connected
